--- a/configs/alacritty.toml
+++ b/configs/alacritty.toml
@@ -1,4 +1,10 @@
 import = [ "~/.config/alacritty/theme.toml", "~/.config/alacritty/font.toml", "~/.local/share/omakub/defaults/alacritty.toml" ]
 
 [font]
-size = 7
+size = 12
+
+[selection]
+save_to_clipboard = true
+
+[window]
+startup_mode = "SimpleFullscreen"
